<resources>
    <string name="app_name">Can I Fly</string>
    <string name="value_with_units">%s %s</string>
    <string name="high_low_temp">High: %s / Low: %s</string>
    <string name="high_low_temp_short">%s°/%s°</string>
    <string name="last_update">Last updated: %s</string>
    <string name="selected_time">Time: %s</string>
    <string name="precib_prob_percent">%s%%</string>
    <string name="value_wind">%s m/s</string>
    <string name="value_temp">%s°C</string>
    <string name="sun">Sun</string>
    <string name="sunrise">sunrise: %s</string>
    <string name="sunset">sunset: %s</string>
    <string name="today">Today</string>
    <string name="wind">Wind</string>
    <string name="gusts">Gusts</string>
    <string name="wind_dir">Wind dir</string>
    <string name="precip_prob">Precip Prob</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="visibility">Visibility</string>
    <string name="current_weather_now_descr">Current weather now</string>
    <string name="altitude">Altitude</string>
    <string name="wind_speed">Wind speed</string>
    <string name="temperature">Temperature</string>
    <string name="_1000m">1000m</string>
    <string name="_800m">800m</string>
    <string name="_500m">500m</string>
    <string name="_300m">300m</string>
    <string name="_100m">100m</string>
    <string name="_10m">10m</string>
    <string name="wind_profile">Wind Profile</string>
    <string name="conditions">Conditions</string>
    <string name="m_s">m/s</string>
    <string name="c">°C</string>
    <string name="percent">%</string>
    <string name="km">km</string>
    <string name="map">Map</string>
    <string name="forecast">Forecast</string>
    <string name="watching_date">Watching date</string>
    <string name="add_bad_signal_zone_dialog_title">Add bad signal zone</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>
    <string name="bad_signal_title">Bad signal zone</string>
    <string name="button_add_watching_date_descr">Button add watching date</string>
    <string name="wind_value">Wind: %s m/s</string>
    <string name="gusts_value">Gusts: %s m/s</string>
    <string name="select_fly_date">Choose a day for flying</string>
    <string name="select_fly_time">Select flight times</string>
    <string name="feels_like">Feels like: %s°C</string>
    <string name="app_icon">App icon</string>
    <string name="features_items">• hourly forecast\n• daily forecast\n• map with NFZ\n• ability to
        add areas with poor communication to the map\n• adding date and time to observe weather
        conditions\n• we\'ll tell you if the weather conditions are suitable for flights</string>
    <string name="location_hint">You\’ll need to enable your location in order to use this app.</string>
    <string name="where_are_you">Where are you?</string>
    <string name="next">Next</string>
    <string name="what_drone_do_you_fly">What drone do you fly?</string>
    <string name="finish">Finish</string>
    <string name="get_notified">Get notified!</string>
    <string name="get_notification_about_selected_date">Get notification about selected date!</string>
    <string name="allow_location_permission">Allow location permission</string>
    <string name="allow_notification_permission">Allow notification permission</string>
    <string name="welcome_image">Welcome image</string>
    <string name="welcome_to_can_i_fly_app">Welcome to Can I Fly app</string>
    <string name="features">Features:</string>
    <string name="location_image">Location image</string>
    <string name="notification_image">Notification image</string>
    <string name="empty_list_image">Empty list image</string>
</resources>