<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/conditionsFragment"
        android:icon="@drawable/ic_conditions_nav"
        android:enabled="true"
        android:title="@string/conditions" />
    <item
        android:id="@+id/forecastFragment"
        android:icon="@drawable/ic_forecast_nav"
        android:enabled="true"
        android:title="@string/forecast" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_map_nav"
        android:enabled="true"
        android:title="@string/map" />
    <item
        android:id="@+id/watchingDateFragment"
        android:icon="@drawable/ic_observing_nav"
        android:enabled="true"
        android:title="@string/watching_date" />
</menu>