<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_my_location"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Vladivostok" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_forecast_nav"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            tools:text="2024.03.24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/ic_time"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintTop_toTopOf="@+id/tv_date"
            tools:text="15:00-17:00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:text="9°C" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_temperature"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
            tools:text="Feels like: 5°C" />

        <ImageView
            android:id="@+id/iv_weather_now"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/current_weather_now_descr"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature"
            android:src="@drawable/ic_clear_day" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/iv_weather_now"
            app:layout_constraintTop_toBottomOf="@+id/iv_weather_now"
            tools:text="@string/wind_value" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_wind_gusts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/tv_wind_speed"
            tools:text="@string/gusts_value" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fly_status"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/fly_status_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:padding="8dp"
            android:text="Good to fly"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>